tests/assembler/pass/test26.ial
type TLS
{
    field thread int32 foo;
}
