tests/assembler/fail/test8.ial
type BrokenTypeSyntax
{
    field int32*. foo;
}
